--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -3,7 +3,7 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 .button-primary {
-  border-radius: 5px;
+  border-radius: 20px;
   background: #fd6e0a;
   border: 0;
   color: white;
@@ -20,6 +20,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-left: 200px;
 }
 
 nav > ul {
@@ -33,7 +34,7 @@ nav li {
 }
 .nav-title {
   color: #181818;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-size: 45px;
   font-weight: 800;
 }
@@ -41,4 +42,35 @@ nav li {
 nav a {
   text-decoration: none;
   color: #474747;
+}
+/* header related styles */
+.header {
+  background-color: #fff8f3;
+  background-image: url('../images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+.contact-me {
+  color: #fd6e0a;
+  background-color: white;
+  border: 2px;
+  border-style: double;
+}
+.banner {
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  justify-content: space-between;
+}
+.hardy {
+  width: 584px;
+  height: 676px;
+}
+
+.banner-heading{
+  font-size: 85px;
+  font-weight: 700;
+}
+.banner-greeting{
+  font-size: 45px;
+  font-weight: 600;
 }
