--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -15,12 +15,28 @@ body {
 .primary-color {
   color: #fd6e0a;
 }
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-family: Open Sans;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-family: Open Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
 /* nav related styles */
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 200px;
+  margin-left: 150px;
 }
 
 nav > ul {
@@ -46,9 +62,10 @@ nav a {
 /* header related styles */
 .header {
   background-color: #fff8f3;
-  background-image: url('../images/header_bg.png');
+  background-image: url("../images/header_bg.png"),
+    url("../images/developer.png");
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-position: bottom right, bottom left;
 }
 .contact-me {
   color: #fd6e0a;
@@ -66,11 +83,45 @@ nav a {
   height: 676px;
 }
 
-.banner-heading{
+.banner-heading {
   font-size: 85px;
   font-weight: 700;
+  margin-top: 0px;
 }
-.banner-greeting{
+.banner-greeting {
   font-size: 45px;
   font-weight: 600;
+  margin-bottom: 10px;
 }
+.banner-description {
+  max-width: 500px;
+  margin-bottom: 50px;
+}
+/* main section styles */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+/* about me section styles */
+.about {
+  border-radius: 20px;
+  background: #fff8f3;
+  padding: 150px;
+  margin: 150px 0px;
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.info-name {
+  margin-bottom: 5px;
+  text-align: center;
+  margin-top: 100px;
+  font-weight: 400;
+}
+.info-description {
+  margin-top: 0px;
+  font-size: large;
+  font-weight: 600;
+}
+/* what i do section styles */
