--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -125,3 +125,23 @@ main {
   font-weight: 600;
 }
 /* what i do section styles */
+#what-i-do {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  width: 900px;
+  height: 90px;
+  padding: 80px;
+}
+.skills-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.skill-description {
+  color: #757575;
+  font-family: Open Sans;
+  font-size: 16px;
+
+  font-weight: 400;
+  line-height: 28px;
+}
