--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -98,6 +98,9 @@ nav a {
   margin-bottom: 50px;
 }
 /* main section styles */
+main section {
+  margin-top: 130px;
+}
 main {
   max-width: 1140px;
   margin: 0 auto;
@@ -129,19 +132,65 @@ main {
   color: #757575;
   text-align: center;
   font-size: 18px;
-  width: 900px;
-  height: 90px;
-  padding: 80px;
+  padding: 40px;
+  margin-top: 0px;
+}
+.skills {
+  width: 267px;
+  height: 377px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 5px 5px 0px;
+  padding: 30px;
 }
 .skills-info-container {
   display: flex;
+  gap: 25px;
   justify-content: space-around;
 }
 .skill-description {
   color: #757575;
-  font-family: Open Sans;
   font-size: 16px;
-
+  font-weight: 400;
+  padding: 25px;
+}
+.skill-name {
+  color: #181818;
+  font-size: 20px;
+  font-weight: 700;
+}
+/* Resume Section Styles */
+.resume-column-title {
+  color: var#474747;
+  font-size: 30px;
+  font-weight: 700;
+}
+.resume-column-container {
+  display: flex;
+  gap: 70px;
+  padding: 30px;
+}
+.resume-description {
+  color: #757575;
+  font-size: 16px;
   font-weight: 400;
   line-height: 28px;
 }
+.resume-institution {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+.resume-item-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 0px;
+}
+#cv-button {
+  justify-content: center;
+  align-items: center;
+}
+/* Footer Section Styles */
+
