--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -188,9 +188,10 @@ main {
   font-weight: 700;
   margin-bottom: 0px;
 }
-#cv-button {
-  justify-content: center;
-  align-items: center;
+.Download-cv{
+  text-align: center;
+  margin-top: 50px;
 }
 /* Footer Section Styles */
+
 
